--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase text-light">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
                 <!-- <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4"> -->
@@ -199,7 +199,7 @@
                         <!-- <h1 class="sub-title">My Work</h1> -->
                         <div class="work-list">
                             <div class="work" id="work1">
-                                <img src="/assets/img/services/1.jpg">
+                                <img src="./assets/img/services/1.jpg">
                                 <div class="layer">
                                     <h3>Digital Marketing</h3>
                                     <p>"Discover the Future of Marketing: Innovative Digital Strategies to Propel Your Business Forward."</p>
@@ -208,7 +208,7 @@
                                 </div>
                             </div>
                             <div class="work" id="work2">
-                                <img src="/assets/img/services/2.jpg">
+                                <img src="./assets/img/services/2.jpg">
                                 <div class="layer">
                                     <h3>Website Development</h3>
                                     <p>"Empower Your Business with the Latest Web Technologies and Design Trends to Ensure Lasting Impact."</p>
@@ -216,7 +216,7 @@
                                 </div>
                             </div>
                                 <div class="work" id="work3">
-                                    <img src="/assets/img/services/3.jpg">
+                                    <img src="./assets/img/services/3.jpg">
                                     <div class="layer">
                                         <h3>IT Consultancy</h3>
                                         <p>"Embrace the Future with Advanced IT Solutions: Expert Consultancy for Emerging Technologies and Trends."</p>
