--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                                 <li><a class="dropdown-item" href="#work1">Digital Marketing</a></li>
                                 <li><a class="dropdown-item" href="#work2">Website Development</a></li>
                                 <li><a class="dropdown-item" href="#work3">IT Consultancy</a></li>
+                                <li><a class="dropdown-item" href="#work4">Marketing Service</a></li>
+
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
@@ -48,12 +50,16 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container">
+        <header class="masthead video-background">
+            <div class="container content">
                 <div class="masthead-subheading">Welcome To WindTech</div>
                 <div class="masthead-heading text-uppercase">Where connectivity meets innovation</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#overview">Tell Me More</a>
             </div>
+            <video autoplay muted loop id="bgVideo">
+                <source src="./assets/video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
         </header>
         <!-- Services-->
         <section class="page-section" id="overview">
@@ -88,6 +94,7 @@
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                 </div>
+
             </div>
         </section>
         <!-- Portfolio Grid-->
@@ -202,7 +209,7 @@
                                 <img src="./assets/img/services/1.jpg">
                                 <div class="layer">
                                     <h3>Digital Marketing</h3>
-                                    <p>"Discover the Future of Marketing: Innovative Digital Strategies to Propel Your Business Forward."</p>
+                                    <p>"Discover innovative digital strategies to propel your business forward."</p>
                                     <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                 
                                 </div>
@@ -211,7 +218,7 @@
                                 <img src="./assets/img/services/2.jpg">
                                 <div class="layer">
                                     <h3>Website Development</h3>
-                                    <p>"Empower Your Business with the Latest Web Technologies and Design Trends to Ensure Lasting Impact."</p>
+                                    <p>"Empower your business with cutting-edge web technologies and design for lasting impact."</p>
                                     <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
                             </div>
@@ -220,6 +227,14 @@
                                     <div class="layer">
                                         <h3>IT Consultancy</h3>
                                         <p>"Embrace the Future with Advanced IT Solutions: Expert Consultancy for Emerging Technologies and Trends."</p>
+                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    </div>
+                                </div>
+                                <div class="work" id="work4">
+                                    <img src="./assets/img/services/4.jpg">
+                                    <div class="layer">
+                                        <h3>Marketing Service</h3>
+                                        <p>"From social media to SEO, we boost your visibility and connect you with customers."</p>
                                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                                     </div>
                                 </div>
