--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/img/logo.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    Menus
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -51,7 +51,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead video-background">
-            <div class="container content">
+            <div class="container content uppercontent">
                 <div class="masthead-subheading">Welcome To WindTech</div>
                 <div class="masthead-heading text-uppercase">Where connectivity meets innovation</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#overview">Tell Me More</a>
