--- a/index.html
+++ b/index.html
@@ -675,5 +675,24 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script type="module">
+            // Import the functions you need from the SDKs you need
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+            // TODO: Add SDKs for Firebase products that you want to use
+            // https://firebase.google.com/docs/web/setup#available-libraries
+          
+            // Your web app's Firebase configuration
+            const firebaseConfig = {
+              apiKey: "AIzaSyCgldRmwBNp2lsqUE7G8BnQU8yvbDRhtLQ",
+              authDomain: "windtech-97bad.firebaseapp.com",
+              projectId: "windtech-97bad",
+              storageBucket: "windtech-97bad.appspot.com",
+              messagingSenderId: "629797965486",
+              appId: "1:629797965486:web:52922f1f13ce4baddd273f"
+            };
+          
+            // Initialize Firebase
+            const app = initializeApp(firebaseConfig);
+          </script>
     </body>
 </html>
