--- a/index.html
+++ b/index.html
@@ -66,33 +66,42 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Overview</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            </i><i class="fa-solid fa-rocket fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Our Mission</h4>
+                        <p class="text-muted">To be an IT and BPO company that provides best business impact globally using the power of Innovation and Technology, giving customers best experience of satisfaction, shaping future with new mindset to customers, colleagues and community. </p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <i class="fa-solid fa-handshake fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Values</h4>
+                        <div>
+                            <p class="text-muted">
+                                <i class="fa-solid fa-handshake"></i> <strong>Integrity</strong> – Always doing the right thing. <br>
+                                <i class="fa-solid fa-hand-holding-medical"></i> <strong>Care</strong> – Believe and take care of each other. <br> 
+                              <strong>Deliver</strong> – Always deliver the best that we can. <br> 
+                              <strong>Innovation</strong> – A new mindset that we can share with everybody. <br> 
+                              <strong>Collaboration</strong> – We work as a team and connect with the community.
+                            </p>
+                          </div>
+                          
                     </div>
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Web Security</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -250,9 +259,9 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"><strong style="font-weight: 700; font-size:15px">Windtech Network and Data Solutuon</strong> is  an IT Consultancy  and BPO company that provides customer service using our new ideas of  architecture in  Data and Technology. We developed new system of Innovation for operation to meet the highest connectivity locally and globally that gives best business impact.</h3>
                 </div>
-                <ul class="timeline">
+                <!-- <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
@@ -304,7 +313,7 @@
                             </h4>
                         </div>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </section>
         <!-- Team-->
