--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <!-- Masthead-->
         <header class="masthead video-background">
             <div class="container content uppercontent">
-                <div class="masthead-subheading">Welcome To WindTech</div>
+                <div class="masthead-subheading">Welcome To <span id="companynamehighlighter">WindTech</span> </div>
                 <div class="masthead-heading text-uppercase">Where connectivity meets innovation</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#overview">Tell Me More</a>
+                <!-- <a class="btn btn-primary btn-xl text-uppercase" href="#overview">Tell Me More</a> -->
             </div>
             <video autoplay muted loop id="bgVideo">
                 <source src="./assets/video.mp4" type="video/mp4">
@@ -87,9 +87,9 @@
                             <p class="text-muted">
                                 <i class="fa-solid fa-handshake"></i> <strong>Integrity</strong> – Always doing the right thing. <br>
                                 <i class="fa-solid fa-hand-holding-medical"></i> <strong>Care</strong> – Believe and take care of each other. <br> 
-                              <strong>Deliver</strong> – Always deliver the best that we can. <br> 
-                              <strong>Innovation</strong> – A new mindset that we can share with everybody. <br> 
-                              <strong>Collaboration</strong> – We work as a team and connect with the community.
+                                <i class="fa-solid fa-star"></i><strong>Deliver</strong> – Always deliver the best that we can. <br> 
+                                <i class="fa-solid fa-arrow-up-wide-short"></i> <strong>Innovation</strong> – A new mindset that we can share with everybody. <br> 
+                                <i class="fa-solid fa-people-group"></i> <strong>Collaboration</strong> – We work as a team and connect with the community.
                             </p>
                           </div>
                           
@@ -218,7 +218,7 @@
                                 <img src="./assets/img/services/1.jpg">
                                 <div class="layer">
                                     <h3>Digital Marketing</h3>
-                                    <p>"Discover innovative digital strategies to propel your business forward."</p>
+                                    <p>"We optimize and develop websites to get organic traffic and customers using AI technology that gives best performance and result."</p>
                                     <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                 
                                 </div>
@@ -259,7 +259,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted"><strong style="font-weight: 700; font-size:15px">Windtech Network and Data Solutuon</strong> is  an IT Consultancy  and BPO company that provides customer service using our new ideas of  architecture in  Data and Technology. We developed new system of Innovation for operation to meet the highest connectivity locally and globally that gives best business impact.</h3>
+                    <h3 class="section-subheading text-muted"><strong style="font-weight: 700; font-size:45px">Windtech Network and Data Solutuon</strong> <br>is  an IT Consultancy  and BPO company that provides customer service using our new ideas of  architecture in  Data and Technology. We developed new system of Innovation for operation to meet the highest connectivity locally and globally that gives best business impact.</h3>
                 </div>
                 <!-- <ul class="timeline">
                     <li>
@@ -321,9 +321,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase text-dark">Why Us?</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">We are a company that provides unexceptional service 
+                        using innovative method and technology, organization who is continuously developing process to meet excellence
+                    </h3>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
@@ -354,10 +356,10 @@
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                </div>
-                <div class="row">
+                </div> -->
+                <!-- <div class="row">
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Clients-->
@@ -384,7 +386,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
