--- a/index.html
+++ b/index.html
@@ -449,16 +449,16 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; WindTechNetwork</div>
                     <div class="row col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                    <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-                    </div>
+                    <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                    <h3>Our Main Office Location</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3872.311864876193!2d121.15930361192072!3d13.94002728641535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd6db4b4a6eca1%3A0x7e8a3949656b05e4!2sLnlms%20IT%20Solutions!5e0!3m2!1sen!2sph!4v1726459394104!5m2!1sen!2sph" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                </div>
                 </div>
             </div>
         </footer>
