--- a/index.html
+++ b/index.html
@@ -243,7 +243,37 @@
                                     <img src="./assets/img/services/4.jpg">
                                     <div class="layer">
                                         <h3>Marketing Service</h3>
-                                        <p>"From social media to SEO, we boost your visibility and connect you with customers."</p>
+                                        <p>"Providing customer service on healthcare industry, contracted with big companies to ensure the satisfaction of their existing and future customers."</p>
+                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    </div>
+                                </div>
+                                <div class="work" id="work5">
+                                    <img src="./assets/img/services/coming-soon.jpg" style="padding-right: 150px;">
+                                    <div class="layer">
+                                        <h3>Coming Soon...</h3>
+                                        <p>"Put Info Here."</p>
+                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    </div>
+                                </div>
+                                <div class="work" id="work6">
+                                    <img src="./assets/img/services/coming-soon.jpg" style="padding-right: 150px;">
+                                    <div class="layer">
+                                        <h3>Coming Soon...</h3>
+                                        <p>"Put Info Here."</p>
+                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    </div>
+                                </div><div class="work" id="work7">
+                                    <img src="./assets/img/services/coming-soon.jpg" style="padding-right: 150px;">
+                                    <div class="layer">
+                                        <h3>Coming Soon...</h3>
+                                        <p>"Put Info Here."</p>
+                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    </div>
+                                </div><div class="work" id="work8">
+                                    <img src="./assets/img/services/coming-soon.jpg" style="padding-right: 150px;">
+                                    <div class="layer">
+                                        <h3>Coming Soon...</h3>
+                                        <p>"Put Info Here."</p>
                                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                                     </div>
                                 </div>
@@ -455,7 +485,9 @@
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
-                    <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                    <!-- <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> -->
+                    <h6><i class="fa-solid fa-phone"></i>  Phone: +639184070803</h6>
+
                     <h3>Our Main Office Location</h3>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3872.311864876193!2d121.15930361192072!3d13.94002728641535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd6db4b4a6eca1%3A0x7e8a3949656b05e4!2sLnlms%20IT%20Solutions!5e0!3m2!1sen!2sph!4v1726459394104!5m2!1sen!2sph" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                 </div>
