--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <div class="layer">
                                     <h3>Digital Marketing</h3>
                                     <p>"We optimize and develop websites to get organic traffic and customers using AI technology that gives best performance and result."</p>
-                                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    <a href="/digitalmarketing.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                 
                                 </div>
                             </div>
