--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
   <div class="video-background">
     <div class="content">
       <h1>Welcome to WindTech</h1>
-      <p>Innovative technology solutions for the modern world</p>
+      <p>Innovative technology solutions for the modern world fgfgdfg</p>
     </div>
     <!-- Video Element -->
     <video autoplay muted loop id="bgVideo">
