some animations added and routes for services

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="page-section" id="overview">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase animate__fadeInLeft">Overview</h2>
+                    <h2 class="section-heading text-uppercase">Overview</h2>
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
                 <div class="row text-center">
@@ -232,7 +232,7 @@
                                 <div class="layer">
                                     <h3>Website Development</h3>
                                     <p>"Empower your business with cutting-edge web technologies and design for lasting impact."</p>
-                                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                    <a href="/website_development.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
                             </div>
                                 <div class="work" id="work3">
@@ -240,7 +240,7 @@
                                     <div class="layer">
                                         <h3>IT Consultancy</h3>
                                         <p>"Embrace the Future with Advanced IT Solutions: Expert Consultancy for Emerging Technologies and Trends."</p>
-                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                        <a href="/it_consoltancy.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                                     </div>
                                 </div>
                                 <div class="work" id="work4">
@@ -248,7 +248,7 @@
                                     <div class="layer">
                                         <h3>Marketing Service</h3>
                                         <p>"Providing customer service on healthcare industry, contracted with big companies to ensure the satisfaction of their existing and future customers."</p>
-                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                        <a href="/marketing_service.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                                     </div>
                                 </div>
                                 <div class="work" id="work5">
@@ -256,7 +256,7 @@
                                     <div class="layer">
                                         <h3>Lead Generation</h3>
                                         <p>"Our process of lead generation on healthcare Industry using AI Technology that provides reasonable and medical necessity with the elders in USA."</p>
-                                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                                        <a href="/lead_generation.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                                     </div>
                                 </div>
                                 <div class="work" id="work6">
