final for today

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 <!-- https://startbootstrap.com/solution/contact-forms-->
                 <!-- to get an API token!-->
                 <form id="contactForm">
-                    <div class="row align-items-stretch mb-5">
+                    <div class="row align-items-stretch mb-5" id="blur_bg">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <input class="form-control" id="name" type="text" placeholder="Your Name *" required />
