--- a/index.html
+++ b/index.html
@@ -487,6 +487,18 @@
         <!-- Lottie library for icons with animations -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
 
+        <!--Caching JS-->
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', function() {
+                    navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+                        console.log('Service Worker registered with scope:', registration.scope);
+                    }, function(err) {
+                        console.log('Service Worker registration failed:', err);
+                    });
+                });
+            }
+        </script>
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
